// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshot 1`] = `
<styled.div>
  <styled.input
    checked={false}
    name="nodejs"
    onChange={[Function]}
    placeholder="My input"
    required={true}
    type="submit"
    value=""
  />
</styled.div>
`;

exports[`Input component should match snapshot with label 1`] = `
<styled.div>
  <styled.input
    checked={false}
    label="label"
    name="nodejs"
    onChange={[Function]}
    placeholder=""
    required={true}
    type="submit"
    value=""
  />
</styled.div>
`;
